# selection_sort

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  xapp.sh  xbuild.sh  xconfig.sh  xtests.sh
src/: CMakeLists.txt  main.cpp  solution.cpp  solution.h
test/: CMakeLists.txt  selection_sort_test.cpp
